--- a/kmeans/kmeans.ipynb
+++ b/kmeans/kmeans.ipynb
@@ -396,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "samples = [x for x, _ in read_files('datasets/adl')]"
@@ -405,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sizes = [len(sample) for sample in samples]"
@@ -414,7 +418,9 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "file_lengths, num_of_files = list(zip(*Counter(sizes).most_common(10)))"
@@ -491,7 +497,9 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig.tight_layout()\n",
@@ -524,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
